--- a/client-app/package.json
+++ b/client-app/package.json
@@ -7,22 +7,21 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.14",
-    "@types/react": "^18.0.28",
-    "@types/react-calendar": "^4.1.0",
-    "@types/react-dom": "^18.0.11",
-    "axios": "^1.3.4",
-    "mobx": "^6.9.0",
-    "mobx-react": "^7.6.0",
-    "mobx-react-lite": "^3.4.3",
+    "@types/node": "^16.18.3",
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.9",
+    "axios": "^1.2.0",
+    "mobx": "^6.7.0",
+    "mobx-react-lite": "^3.4.0",
     "react": "^18.2.0",
-    "react-calendar": "^4.3.0",
+    "react-calendar": "^4.0.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.0",
+    "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.1",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
-    "typescript": "^4.9.5",
+    "typescript": "^4.9.3",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
@@ -51,6 +50,7 @@
     ]
   },
   "devDependencies": {
-    "@types/uuid": "^9.0.2"
+    "@types/react-calendar": "^3.9.0",
+    "@types/uuid": "^9.0.0"
   }
 }
